--- a/base/build.gradle
+++ b/base/build.gradle
@@ -13,10 +13,9 @@ dependencies {
 
     compileOnly "org.osgi:osgi.annotation:$osgiVersion"
 
-    testImplementation "org.assertj:assertj-core:$assertjVersion"
-    testImplementation "org.apache.commons:commons-lang3:$commonsLangVersion"
-    testImplementation "com.google.guava:guava-testlib:$guavaVersion"
-
+    junit4TestImplementation "org.assertj:assertj-core:$assertjVersion"
+    junit4TestImplementation "org.apache.commons:commons-lang3:$commonsLangVersion"
+    junit4TestImplementation "com.google.guava:guava-testlib:$guavaVersion"
     junit4TestImplementation "junit:junit:$legacyJunitVersion"
 }
 
