--- a/.gitignore
+++ b/.gitignore
@@ -28,41 +28,7 @@ lib/quasar.jar
 *.iml
 
 ## Directory-based project format:
-.idea/*.xml
-.idea/.name
-.idea/copyright
-.idea/inspectionProfiles
-.idea/libraries
-.idea/shelf
-.idea/dataSources
-.idea/markdown-navigator
-.idea/runConfigurations
-.idea/dictionaries
-
-
-# Include the -parameters compiler option by default in IntelliJ required for serialization.
-!.idea/codeStyleSettings.xml
-
-# if you remove the above rule, at least ignore the following:
-
-# User-specific stuff:
-# .idea/workspace.xml
-# .idea/tasks.xml
-# .idea/dictionaries
-
-# Sensitive or high-churn files:
-# .idea/dataSources.ids
-# .idea/dataSources.xml
-# .idea/sqlDataSources.xml
-# .idea/dynamic.xml
-# .idea/uiDesigner.xml
-
-# Gradle:
-# .idea/gradle.xml
-# .idea/libraries
-
-# Mongo Explorer plugin:
-# .idea/mongoSettings.xml
+.idea/*
 
 ## File-based project format:
 *.ipr
