Remove redundant maven repos.

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@ log4jVersion = 2.13.3
 
 commonsLangVersion = 3.9
 # Overide Artemis version
-detektPluginVersion = 1.14.0
+detektPluginVersion = 1.17.+
 grgitPluginVersion = 4.0.2
 jfrogArtifactoryPluginVersion = 4.18.0
 taskTreePluginVersion = 1.5
