--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,16 @@ pluginManagement {
                     password = System.getenv('CORDA_ARTIFACTORY_PASSWORD')
                 }
             }
+            maven {
+                url "$artifactoryContextUrl/engineering-tools-maven"
+                credentials {
+                    username = System.getenv('CORDA_ARTIFACTORY_USERNAME') ?: cordaArtifactoryUsername
+                    password = System.getenv('CORDA_ARTIFACTORY_PASSWORD') ?: cordaArtifactoryPassword
+                }
+                content {
+                    includeGroupByRegex 'com\\.r3\\.internal(\\..*)?'
+                }
+            }
         } else {
             maven {
                 url "$artifactoryContextUrl/corda-dev"
@@ -24,6 +34,16 @@ pluginManagement {
                 url "$artifactoryContextUrl/corda-releases"
                 content {
                     includeGroupByRegex 'net\\.corda\\.plugins(\\..*)?'
+                }
+            }
+            maven {
+                url "$artifactoryContextUrl/engineering-tools-maven"
+                credentials {
+                    username = System.getenv('CORDA_ARTIFACTORY_USERNAME') ?: cordaArtifactoryUsername
+                    password = System.getenv('CORDA_ARTIFACTORY_PASSWORD') ?: cordaArtifactoryPassword
+                }
+                content {
+                    includeGroupByRegex 'com\\.r3\\.internal(\\..*)?'
                 }
             }
             gradlePluginPortal()
