--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,11 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.noarg' apply false
     id 'io.gitlab.arturbosch.detekt' apply false
     id 'org.ajoberstar.grgit' // used for GIT interaction (e.g. extract commit hash)
-    id 'com.jfrog.artifactory'
+    id 'com.r3.internal.gradle.plugins.r3ArtifactoryPublish'
     id 'maven-publish'
     id 'jacoco' // test coverage
     id 'com.dorongold.task-tree' // utility to visualise Gradle task DAG
+    id 'org.jetbrains.dokka'
 }
 
 def rootProjectDir = rootDir
@@ -55,24 +56,6 @@ void configureKotlinForOSGi(Configuration configuration) {
 }
 
 def releaseType = System.getenv('RELEASE_TYPE') ?: "SNAPSHOT"
-artifactory {
-    publish {
-        contextUrl = artifactoryContextUrl
-        repository {
-            repoKey = System.getenv('CORDA_PUBLISH_REPOSITORY_KEY') ?: 'corda-os-maven-dev'
-            username = System.getenv('CORDA_ARTIFACTORY_USERNAME')
-            password = System.getenv('CORDA_ARTIFACTORY_PASSWORD')
-            maven = true
-        }
-        defaults {
-            publishPom = true
-            publishArtifacts = true
-            publishBuildInfo = true
-
-            properties = ['release.type': releaseType, 'source.revision': revision]
-        }
-    }
-}
 
 allprojects {
     repositories {
@@ -141,6 +124,7 @@ subprojects {
     apply plugin: 'kotlin'
     apply plugin: DetektPlugin
     apply plugin: 'jacoco'
+    apply plugin: 'org.jetbrains.dokka'
 
     // NOTE: question whether it is "ok" to force dependencies on all modules like this
     //  thinking is that for the test dependencies it's ok as it'll keep things consistent.
@@ -340,6 +324,16 @@ subprojects {
             xml.enabled true
             html.enabled true
         }
+    }
+
+    tasks.register('javadocJar', Jar) {
+        description = 'Create JavaDoc Jar from dokka docs'
+        group = 'documentation'
+
+        dependsOn(dokka)
+        archiveBaseName = jar.archiveBaseName
+        archiveClassifier.set("javadoc")
+        from(dokka.outputDirectory)
     }
 
 }
