--- a/build.gradle
+++ b/build.gradle
@@ -330,10 +330,10 @@ subprojects {
         description = 'Create JavaDoc Jar from dokka docs'
         group = 'documentation'
 
-        dependsOn(dokka)
+        dependsOn(dokkaHtml)
         archiveBaseName = jar.archiveBaseName
         archiveClassifier.set("javadoc")
-        from(dokka.outputDirectory)
+        from(dokkaHtml.outputDirectory)
     }
 
 }
