--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ licenseUrl = 'https://www.r3.com/wp-content/uploads/2020/07/Corda-Pre-Release-So
 artifactoryContextUrl = https://software.r3.com/artifactory
 
 internalPublishVersion = 0.1.+
-dokkaVersion = 0.10.1
+dokkaVersion = 1.4.+
 
 guavaVersion = 30.1.1-jre
 
