--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,11 @@
 # because some versions here need to be matched by app authors in
 # their own projects. So don't get fancy with syntax!
 
-# Main
-cordaVersion = 5.0.0
-kotlinVersion = 1.4.21
+# Versioning
+cordaProductVersion = 5.0.0
+# NOTE: update this each time this module contains a breaking change
+## NOTE: decide whether to leave this at parent level or change per module
+cordaApiRevision = 0
 
 # License
 ## TODO: Change to correct name and URL
