Add back in kotlinVersion

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,9 @@ cordaProductVersion = 5.0.0
 ## NOTE: decide whether to leave this at parent level or change per module
 cordaApiRevision = 0
 
+# Kotlin
+kotlinVersion = 1.4.21
+
 # License
 ## TODO: Change to correct name and URL
 licenseName = 'Corda Pre-Release Software License Agreement'
