--- a/build.gradle
+++ b/build.gradle
@@ -103,8 +103,8 @@ def cordaVersion = "$cordaProductVersion.$cordaApiRevision"
 if (System.getenv("RELEASE_VERSION")?.trim()) {
     version = System.getenv("RELEASE_VERSION")
 } else {
-    def versionSuffix = System.getenv('VERSION_SUFFIX') ?: "0-SNAPSHOT"
-    version = "$cordaVersion-$versionSuffix"
+    def versionSuffix = System.getenv('VERSION_SUFFIX') ?: "-SNAPSHOT"
+    version = "$cordaVersion$versionSuffix"
 }
 
 logger.quiet("Corda release version: {}", version)
