--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,14 @@
 # because some versions here need to be matched by app authors in
 # their own projects. So don't get fancy with syntax!
 
+# Versioning
+cordaProductVersion = 5.0.0
+# NOTE: update this each time this module contains a breaking change
+## NOTE: currently this is a top level revision, so all API versions will line up, but this could be moved to
+##   a per module property in which case module versions can change independently.
+cordaApiRevision = 0
+
 # Main
-cordaVersion = 5.0.0
 kotlinVersion = 1.4.21
 
 # License
