CORE-2125 moved cipher suite

--- a/settings.gradle
+++ b/settings.gradle
@@ -89,6 +89,7 @@ rootProject.name = "corda-api"
 includeBuild 'cordapp-configuration'
 include 'application'
 include 'base'
+include 'cipher-suite'
 include 'corda-platform'
 include 'cordapp-configuration-publish'
 include 'crypto'
