Increase max metaspace for dokka

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,8 +20,13 @@ licenseUrl = 'https://www.r3.com/wp-content/uploads/2020/07/Corda-Pre-Release-So
 # Artifactory
 artifactoryContextUrl = https://software.r3.com/artifactory
 
+# Gradle
+# dokka need more metaspace - https://github.com/Kotlin/dokka/issues/1405
+org.gradle.jvmargs=-XX:MaxMetaspaceSize=1g
 internalPublishVersion = 0.1.+
 dokkaVersion = 1.4.+
+
+
 
 guavaVersion = 30.1.1-jre
 
