--- a/settings.gradle
+++ b/settings.gradle
@@ -37,6 +37,7 @@ pluginManagement {
             }
             content {
                 includeGroupByRegex 'com\\.r3\\.internal(\\..*)?'
+                includeGroupByRegex 'corda\\.common-library(\\..*)?'
             }
         }
     }
@@ -53,6 +54,7 @@ pluginManagement {
         id 'com.dorongold.task-tree' version taskTreePluginVersion // utility to visualise Gradle task DAG
         id 'biz.aQute.bnd.builder' version bndVersion // used to create OSGi bundles
         id 'org.jetbrains.dokka' version dokkaVersion
+        id 'corda.common-library' version cordaCommonLibraryVersion
     }
 }
 
