--- a/base/build.gradle
+++ b/base/build.gradle
@@ -1,11 +1,13 @@
 plugins {
     id 'com.r3.internal.gradle.plugins.r3Publish'
+    id 'org.jetbrains.kotlin.jvm'
     id 'biz.aQute.bnd.builder'
 }
 
 description 'Corda Base'
 
 dependencies {
+    implementation platform(project(':corda-platform'))
     implementation "org.jetbrains.kotlin:kotlin-osgi-bundle:$kotlinVersion"
     implementation "net.corda.kotlin:kotlin-stdlib-jdk8-osgi:$kotlinVersion"
     // Concluded this is the one acceptable dependency in addition to kotlin.
