--- a/crypto/build.gradle
+++ b/crypto/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.r3.internal.gradle.plugins.r3Publish'
+    id 'org.jetbrains.kotlin.jvm'
     id 'biz.aQute.bnd.builder'
 }
 
@@ -16,6 +17,7 @@ dependencies {
     implementation "org.bouncycastle:bcpkix-jdk15on:$bouncycastleVersion"
     implementation "net.i2p.crypto:eddsa:$eddsaVersion"
 
+    api platform(project(':corda-platform'))
     api project(':base')
 
     testImplementation "org.assertj:assertj-core:$assertjVersion"
