--- a/data/avro-schema/build.gradle
+++ b/data/avro-schema/build.gradle
@@ -3,6 +3,7 @@ import groovy.io.FileType
 import groovy.text.SimpleTemplateEngine
 
 plugins {
+    id 'org.jetbrains.kotlin.jvm'
     id 'com.r3.internal.gradle.plugins.r3Publish'
     id "com.github.davidmc24.gradle.plugin.avro-base"
     id 'biz.aQute.bnd.builder'
@@ -10,6 +11,7 @@ plugins {
 
 dependencies {
     api "org.apache.avro:avro:$avroVersion"
+    implementation platform(project(':corda-platform'))
     implementation project(":base")
 
     compileOnly "org.osgi:osgi.annotation:$osgiVersion"
@@ -120,7 +122,6 @@ tasks.named('processResources', ProcessResources) {
  * all the classes from this bundle.
  */
 tasks.named('jar', Jar) {
-    archiveBaseName = project.name
     bnd """
 Bundle-Name: \${project.description}
 Bundle-SymbolicName: \${project.group}.\${project.name}
