--- a/data/avro-schema/build.gradle
+++ b/data/avro-schema/build.gradle
@@ -10,7 +10,7 @@ plugins {
 
 dependencies {
     api "org.apache.avro:avro:$avroVersion"
-    implementation "net.corda:corda-base:$cordaApiVersion"
+    implementation project(":base")
 }
 
 description 'Data Model Definitions'
