--- a/gradle.properties
+++ b/gradle.properties
@@ -35,9 +35,11 @@ guavaVersion = 30.1.1-jre
 slf4jVersion = 1.7.30
 log4jVersion = 2.13.3
 
+# Main implementation dependencies
+avroGradlePluginVersion=1.1.0
+avroVersion=1.10.1
 bouncycastleVersion = 1.69
 commonsLangVersion = 3.9
-# Overide Artemis version
 detektPluginVersion = 1.17.+
 eddsaVersion = 0.3.0
 grgitPluginVersion = 4.0.2
