Remove generated classes and update gradle files

--- a/data/avro-schema/build.gradle
+++ b/data/avro-schema/build.gradle
@@ -4,7 +4,7 @@ import groovy.text.SimpleTemplateEngine
 
 plugins {
     id 'com.r3.internal.gradle.plugins.r3Publish'
-    id "com.github.davidmc24.gradle.plugin.avro-base" version "$avroGradlePluginVersion"
+    id "com.github.davidmc24.gradle.plugin.avro-base"
     id 'biz.aQute.bnd.builder'
 }
 
