--- a/data/avro-schema/build.gradle
+++ b/data/avro-schema/build.gradle
@@ -40,32 +40,35 @@ def generateOSGiPackageInfo = tasks.register("generateOSGiPackageInfo", Task) {
     group = "codeGeneration"
     def packages = [] as Set
     def classes = [] as Set
-    file(generatedPackageInfoDir).eachFileRecurse(FileType.FILES) {
-        if (!it.name.contains("package-info") && it.name.endsWith('.java')) {
-            def packageName = ((it.text =~ "package (.+);")[0][1])
-            packages << packageName
-            def classCapture = it.text.normalize() =~ "@org.apache.avro.specific.AvroGenerated\npublic class (\\w+) extends org.apache.avro.specific.SpecificRecordBase"
-            if (classCapture.any()) {
-                classes << packageName + '.' + classCapture[0][1]
+
+    doLast {
+        file(generatedPackageInfoDir).eachFileRecurse(FileType.FILES) {
+            if (!it.name.contains("package-info") && it.name.endsWith('.java')) {
+                def packageName = ((it.text =~ "package (.+);")[0][1])
+                packages << packageName
+                def classCapture = it.text.normalize() =~ "@org.apache.avro.specific.AvroGenerated\npublic class (\\w+) extends org.apache.avro.specific.SpecificRecordBase"
+                if (classCapture.any()) {
+                    classes << packageName + '.' + classCapture[0][1]
+                }
             }
         }
-    }
 
-    packages.each {
-        def dir = "$generatedPackageInfoDir/${it.replaceAll(/\./, '/')}"
-        def outputFile = file(dir + '/package-info.java').newWriter()
-        outputFile << applyPackageInfoTemplate(it)
-        outputFile.close()
-    }
-
-    sourceSets.main.resources {
-        def generatedClassesDir = 'src/main/resources/net/corda/data'
-        mkdir generatedClassesDir
-        def outputFile = file(generatedClassesDir + '/generated-avro-message-classes.txt').newWriter()
-        for (generatedClass in classes.sort()) {
-            outputFile.println generatedClass.toString().denormalize()
+        packages.each {
+            def dir = "$generatedPackageInfoDir/${it.replaceAll(/\./, '/')}"
+            def outputFile = file(dir + '/package-info.java').newWriter()
+            outputFile << applyPackageInfoTemplate(it)
+            outputFile.close()
         }
-        outputFile.close()
+
+        sourceSets.main.resources {
+            def generatedClassesDir = 'src/main/resources/net/corda/data'
+            mkdir generatedClassesDir
+            def outputFile = file(generatedClassesDir + '/generated-avro-message-classes.txt').newWriter()
+            for (generatedClass in classes.sort()) {
+                outputFile.println generatedClass.toString().denormalize()
+            }
+            outputFile.close()
+        }
     }
 
     dependsOn(generateAvro)
@@ -88,6 +91,14 @@ import org.osgi.annotation.bundle.Export;
     engine.createTemplate(templateText).make(templateParams).toString().denormalize()
 }
 // endregion
+
+tasks.named("compileKotlin") {
+    dependsOn generateAvro
+}
+
+tasks.named("assemble") {
+    dependsOn generateAvro, generateOSGiPackageInfo
+}
 
 /**
  * Make this bundle a fragment of the Avro bundle to allow Avro to classload
