--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-import io.gitlab.arturbosch.detekt.DetektPlugin
 import static org.gradle.api.JavaVersion.*
 
 buildscript {
@@ -11,6 +10,7 @@ buildscript {
 
 
 plugins {
+    id 'net.corda.cordapp.cordapp-configuration'
     id 'org.jetbrains.kotlin.jvm' apply false
     id 'org.jetbrains.kotlin.plugin.allopen' apply false
     id 'org.jetbrains.kotlin.plugin.noarg' apply false
@@ -83,7 +83,7 @@ subprojects {
     group 'net.corda'
 
     pluginManager.withPlugin('org.jetbrains.kotlin.jvm') {
-        apply plugin: DetektPlugin
+        apply plugin: 'io.gitlab.arturbosch.detekt'
         apply plugin: 'jacoco'
         apply plugin: 'org.jetbrains.dokka'
 
