Override the version suffix for the local publication artifacts so we can check what the "would be" (after merge) state is for version compatibility

--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,12 @@ def cordaVersion = "$cordaProductVersion.$cordaApiRevision"
 if (System.getenv("RELEASE_VERSION")?.trim()) {
     version = System.getenv("RELEASE_VERSION")
 } else {
-    def versionSuffix = System.getenv('VERSION_SUFFIX') ?: "-SNAPSHOT"
+    def versionSuffix = '-SNAPSHOT'
+    if(project.hasProperty('overridePublishVersionSuffix')) {
+        versionSuffix = project.property('overridePublishVersionSuffix')
+    } else if (System.getenv('VERSION_SUFFIX')) {
+        versionSuffix = System.getenv('VERSION_SUFFIX')
+    }
     version = "$cordaVersion$versionSuffix"
 }
 
