--- a/corda-platform/build.gradle
+++ b/corda-platform/build.gradle
@@ -11,6 +11,7 @@ dependencies {
         api project(':crypto')
         api project(':data:avro-schema')
         api project(':data:topic-schema')
+        api project(':persistence')
         api project(':serialization')
     }
 }
