CORE-2135: Rename Gradle platform to corda-api.

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-osgi-bundle:$kotlinVersion"
     api "net.corda.kotlin:kotlin-stdlib-jdk8-osgi:$kotlinVersion"
 
-    api platform(project(':corda-platform'))
+    api platform(project(':corda-api'))
     api project(":base")
     api project(":serialization")
 
