--- a/settings.gradle
+++ b/settings.gradle
@@ -91,7 +91,7 @@ includeBuild 'cordapp-configuration'
 include 'application'
 include 'base'
 include 'cipher-suite'
-include 'corda-platform'
+include 'corda-api'
 include 'cordapp-configuration-publish'
 include 'crypto'
 include 'data:avro-schema'
