--- a/cipher-suite/build.gradle
+++ b/cipher-suite/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     implementation "org.bouncycastle:bcpkix-jdk15on:$bouncycastleVersion"
     implementation "net.i2p.crypto:eddsa:$eddsaVersion"
 
-    implementation platform(project(':corda-platform'))
+    api platform(project(':corda-api'))
     api project(':base')
     api project(':crypto')
 
