--- a/crypto/build.gradle
+++ b/crypto/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     implementation "org.bouncycastle:bcpkix-jdk15on:$bouncycastleVersion"
     implementation "net.i2p.crypto:eddsa:$eddsaVersion"
 
-    api platform(project(':corda-platform'))
+    api platform(project(':corda-api'))
     api project(':base')
 
     testImplementation "org.assertj:assertj-core:$assertjVersion"
