--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@ artifactoryContextUrl = https://software.r3.com/artifactory
 # dokka need more metaspace - https://github.com/Kotlin/dokka/issues/1405
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=1g
 internalPublishVersion = 0.1.+
+internalApiScannerVersion = 0.1.1628691012462-alpha
 dokkaVersion = 1.4.+
 
 
