CORE-2012  Initial import of packaging from corda5 repo
Code is unchanged except that the version comparison code has been
completely rewritten from C-style Java, to kotlin.

There are fuzz-tests for the version code that can be enabled by removing the
`@Disabled` annotation.

--- a/settings.gradle
+++ b/settings.gradle
@@ -36,6 +36,7 @@ pluginManagement {
     }
 
     plugins {
+        id 'net.corda.plugins.cordapp-cpk' version gradlePluginsVersion
         id 'org.jetbrains.kotlin.jvm' version kotlinVersion
         id 'org.jetbrains.kotlin.plugin.allopen' version kotlinVersion
         id 'org.jetbrains.kotlin.plugin.noarg' version kotlinVersion
@@ -96,5 +97,8 @@ include 'cordapp-configuration-publish'
 include 'crypto'
 include 'data:avro-schema'
 include 'data:topic-schema'
+include 'packaging'
+include 'packaging:test:contract-cpk'
+include 'packaging:test:workflow-cpk'
 include 'persistence'
 include 'serialization'
