fixed api-scanner task failing

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,7 +25,7 @@ artifactoryContextUrl = https://software.r3.com/artifactory
 # dokka need more metaspace - https://github.com/Kotlin/dokka/issues/1405
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=1g
 internalPublishVersion = 0.1.+
-internalApiScannerVersion = 0.1.1628769914712-alpha
+internalApiScannerVersion = 0.1.-alpha-1629378140601
 dokkaVersion = 1.4.+
 
 
