DO NOT MERGE! Introduce kryo-serialiser dependency to test INFRA-1553.

--- a/gradle.properties
+++ b/gradle.properties
@@ -58,3 +58,5 @@ mockitoKotlinVersion = 1.6.0
 bndVersion = 5.3.0
 osgiVersion = 8.0.0
 osgiScrAnnotationVersion = 1.4.0
+
+kryo_serializer_version = 0.43
