a test commit to force rebuild

--- a/gradle.properties
+++ b/gradle.properties
@@ -60,5 +60,6 @@ osgiVersion = 8.0.0
 osgiScrAnnotationVersion = 1.4.0
 
 
+# for tests only!!!
 jackson_version = 2.9.7
 kryo_serializer_version = 0.43
