--- a/cipher-suite/build.gradle
+++ b/cipher-suite/build.gradle
@@ -1,7 +1,7 @@
 plugins {
+    id 'corda.common-library'
     id 'com.r3.internal.gradle.plugins.r3Publish'
     id 'org.jetbrains.kotlin.jvm'
-    id 'biz.aQute.bnd.builder'
 }
 
 description 'Corda Cipher Suite'
@@ -21,7 +21,6 @@ dependencies {
     api project(':crypto')
 
     testImplementation "org.assertj:assertj-core:$assertjVersion"
-    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
 }
 
 tasks.named('jar', Jar) {
