--- a/crypto/build.gradle
+++ b/crypto/build.gradle
@@ -1,7 +1,7 @@
 plugins {
+    id 'corda.common-library'
     id 'com.r3.internal.gradle.plugins.r3Publish'
     id 'org.jetbrains.kotlin.jvm'
-    id 'biz.aQute.bnd.builder'
 }
 
 description 'Corda Crypto'
