--- a/gradle.properties
+++ b/gradle.properties
@@ -59,3 +59,4 @@ mockitoKotlinVersion = 1.6.0
 bndVersion = 5.3.0
 osgiVersion = 8.0.0
 osgiScrAnnotationVersion = 1.4.0
+osgiTestJunit5Version=1.0.0
