--- a/settings.gradle
+++ b/settings.gradle
@@ -47,6 +47,7 @@ pluginManagement {
         id 'biz.aQute.bnd.builder' version bndVersion // used to create OSGi bundles
         id 'org.jetbrains.dokka' version dokkaVersion
         id "com.github.davidmc24.gradle.plugin.avro-base" version avroGradlePluginVersion
+        id 'corda.common-library' version internalPublishVersion
     }
 }
 
