--- a/gradle.properties
+++ b/gradle.properties
@@ -67,3 +67,8 @@ mockitoKotlinVersion = 3.2.0
 bndVersion = 5.3.0
 osgiVersion = 8.0.0
 osgiScrAnnotationVersion = 1.4.0
+
+
+# for tests only!!!
+jackson_version = 2.9.7
+kryo_serializer_version = 0.43
