CORE-2295 fix jar name

--- a/buildSrc/src/main/groovy/corda-api.common-library.gradle
+++ b/buildSrc/src/main/groovy/corda-api.common-library.gradle
@@ -24,7 +24,7 @@ dependencies {
 }
 
 tasks.named('jar', Jar) {
-    archiveBaseName = project.name
+    archiveBaseName = "corda-" + project.name
     bnd """
 Bundle-Name: \${project.description}
 Bundle-SymbolicName: \${project.group}.\${project.name}
