CORE-2227: Port `:http-rpc-api` from Corda5 repo

--- a/corda-api/build.gradle
+++ b/corda-api/build.gradle
@@ -14,6 +14,7 @@ dependencies {
         api project(':data:topic-schema')
         api project(':persistence')
         api project(':serialization')
+        api project(':http-rpc-api')
 
         api "javax.persistence:javax.persistence-api:$javaxPersistenceApiVersion"
         api "net.corda.kotlin:kotlin-stdlib-jdk8-osgi:$kotlinVersion"
