--- a/packaging/build.gradle
+++ b/packaging/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'corda-api.common-library'
     id 'org.jetbrains.kotlin.jvm'
     id 'com.r3.internal.gradle.plugins.r3Publish'
+    id 'net.corda.internal.gradle.plugins.api-scanner'
 }
 
 description 'Corda Packaging'
