--- a/settings.gradle
+++ b/settings.gradle
@@ -45,7 +45,7 @@ pluginManagement {
         id 'org.ajoberstar.grgit' version grgitPluginVersion // used for GIT interaction (e.g. extract commit hash)
         id 'com.r3.internal.gradle.plugins.r3Publish' version internalPublishVersion
         id 'com.r3.internal.gradle.plugins.r3ArtifactoryPublish' version internalPublishVersion
-        id 'net.corda.internal.gradle.plugins.api-scanner' version internalApiScannerVersion
+//        id 'net.corda.internal.gradle.plugins.api-scanner' version internalApiScannerVersion
         id 'com.dorongold.task-tree' version taskTreePluginVersion // utility to visualise Gradle task DAG
         id 'biz.aQute.bnd.builder' version bndVersion // used to create OSGi bundles
         id 'org.jetbrains.dokka' version dokkaVersion
@@ -104,3 +104,4 @@ include 'packaging:test:contract-cpk'
 include 'packaging:test:workflow-cpk'
 include 'persistence'
 include 'serialization'
+includeBuild '../corda-internal-gradle-plugins'
