--- a/gradle.properties
+++ b/gradle.properties
@@ -29,8 +29,8 @@ artifactoryContextUrl = https://software.r3.com/artifactory
 # Gradle
 # dokka need more metaspace - https://github.com/Kotlin/dokka/issues/1405
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=1g
-internalPublishVersion = 0.1.-beta+
-internalApiScannerVersion = 0.1.-beta+
+internalPublishVersion = 1.0.+
+internalApiScannerVersion = 1.0.+
 dokkaVersion = 1.4.+
 
 
