Standardization of Build artefacts in corda-api ( :data:*-schema modules do no use corda-* artifact ID)

--- a/data/avro-schema/build.gradle
+++ b/data/avro-schema/build.gradle
@@ -128,6 +128,8 @@ tasks.named('processResources', ProcessResources) {
  * all the classes from this bundle.
  */
 tasks.named('jar', Jar) {
+    archiveBaseName = "corda-" + project.name
+
     bnd """
 Bundle-Name: \${project.description}
 Bundle-SymbolicName: \${project.group}.\${project.name}
