--- a/data/topic-schema/build.gradle
+++ b/data/topic-schema/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm'
     id 'com.r3.internal.gradle.plugins.r3Publish'
-    id 'java-library'
+    id 'corda-api.common-library'
 }
 
 description 'Definition of Topics'
@@ -9,4 +9,7 @@ description 'Definition of Topics'
 dependencies {
     implementation 'net.corda.kotlin:kotlin-stdlib-jdk8-osgi'
     implementation platform(project(':corda-api'))
+
+    compileOnly 'org.osgi:osgi.annotation'
 }
+
