--- a/settings.gradle
+++ b/settings.gradle
@@ -99,6 +99,7 @@ include 'data:avro-schema'
 include 'data:topic-schema'
 include 'ledger'
 include 'membership'
+include 'membership-identity'
 include 'packaging'
 include 'packaging:test:contract-cpk'
 include 'packaging:test:workflow-cpk'
