commenting out mavenLocal() to see if the build passes

--- a/settings.gradle
+++ b/settings.gradle
@@ -53,7 +53,7 @@ pluginManagement {
 
 dependencyResolutionManagement {
     repositories {
-        mavenLocal()
+        //mavenLocal()
 
         def cordaUseCache = System.getenv("CORDA_USE_CACHE")
         if (cordaUseCache != null) {
