attempt to see if the build passes

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 pluginManagement {
     repositories {
         def cordaUseCache = System.getenv("CORDA_USE_CACHE")
-        if (cordaUseCache != null) {
+        if (false) {
             maven {
                 url = "$artifactoryContextUrl/$cordaUseCache"
                 name = "R3 Maven remote repositories"
