CORE-2436  Extend manifest scanning to capture custom crypto classes.
Scan for cpks DigestAlgorithmFactory

Scan classes implementing net.corda.v5.cipher.suite.DigestAlgorithmFactory in a cpk
and add them to the cpk's manifest.

Part of POC (see Jira) to demonstrate we can define and instantiate custom crypto.

--- a/.gitignore
+++ b/.gitignore
@@ -55,13 +55,12 @@ crashlytics-build.properties
 *.swo
 
 # Files you may find useful to have in your working directory.
-PLAN
-NOTES
-TODO
+PLAN*
+NOTES*
+TODO*
 
 # gradle-dependx plugin
 .dependx/
 
 # Directory generated during Resolve and TestOSGi gradle tasks
 bnd/
-
